# ChangeLog for sci-biology/prosite
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/prosite/ChangeLog,v 1.86 2006/11/02 00:50:44 ribosome Exp $

  02 Nov 2006; Olivier Fisette <ribosome@gentoo.org> prosite-19.36.ebuild:
  Added to x86.

*prosite-19.37 (18 Oct 2006)

  18 Oct 2006; Olivier Fisette <ribosome@gentoo.org> +prosite-19.37.ebuild:
  New upstream version.

*prosite-19.36 (08 Oct 2006)

  08 Oct 2006; Olivier Fisette <ribosome@gentoo.org> +prosite-19.36.ebuild:
  New upstream version.

*prosite-19.35 (29 Sep 2006)

  29 Sep 2006; Olivier Fisette <ribosome@gentoo.org> +prosite-19.35.ebuild:
  New upstream version.

  18 Aug 2006; Jason Wever <weeve@gentoo.org> prosite-19.29.ebuild:
  Added ~sparc keyword wrt bug #144241.

*prosite-19.29 (26 Jun 2006)

  26 Jun 2006; Olivier Fisette <ribosome@gentoo.org> +prosite-19.29.ebuild:
  New upstream version.

  24 May 2006; Michael Hanselmann <hansmi@gentoo.org> prosite-19.22.ebuild:
  Stable on ppc.

  22 Apr 2006; Markus Rothe <corsair@gentoo.org> prosite-19.22.ebuild:
  Stable on ppc64

*prosite-19.25 (19 Apr 2006)

  19 Apr 2006; Olivier Fisette <ribosome@gentoo.org> -prosite-19.16.ebuild,
  -prosite-19.17.ebuild, -prosite-19.19.ebuild, -prosite-19.20.ebuild,
  prosite-19.22.ebuild, +prosite-19.25.ebuild:
  Removed old versions. Added 19.22 to x86. New version.

  08 Apr 2006; Simon Stelling <blubb@gentoo.org> prosite-19.18.ebuild:
  stable on amd64

*prosite-19.22 (15 Mar 2006)

  15 Mar 2006; Olivier Fisette <ribosome@gentoo.org> +prosite-19.22.ebuild:
  New version.

  22 Feb 2006; Fabian Groffen <grobian@gentoo.org> prosite-19.18.ebuild:
  Marked ppc-macos stable (bug #123334)

  22 Feb 2006; <nixnut@gentoo.org> prosite-19.18.ebuild:
  Stable on ppc. bug 123334

  21 Feb 2006; Markus Rothe <corsair@gentoo.org> prosite-19.18.ebuild:
  Stable on ppc64; bug #123334
