@@ -1,1 +1,3 @@
 MD5 072bcaf3a3f6c3953635bed06abf0b0e prosite-19.18.tar.bz2 3928052
+RMD160 59893849b2f04a693e484b1f67c5f240f81628cf prosite-19.18.tar.bz2 3928052
+SHA256 7448d35ac58f1ea268de2bf87aacc73f41ace344d8800b33d134ad1165a63a89 prosite-19.18.tar.bz2 3928052
