@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/prosite/Attic/prosite-19.25.ebuild,v 1.1 2006/04/19 15:09:18 ribosome Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/prosite/Attic/prosite-19.25.ebuild,v 1.2 2006/11/02 20:49:51 grobian Exp $
 
 DESCRIPTION="A protein families and domains database"
 LICENSE="swiss-prot"
@@ -11,7 +11,7 @@ SLOT="0"
 # Minimal build keeps only the indexed files (if applicable) and the
 # documentation. The non-indexed database is not installed.
 IUSE="emboss minimal"
-KEYWORDS="~amd64 ~ppc ~ppc-macos ~ppc64 ~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 
 DEPEND="emboss? ( >=sci-biology/emboss-3.0.0 )"
 
