@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/transfac
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/transfac/ChangeLog,v 1.12 2006/08/18 02:49:24 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/transfac/ChangeLog,v 1.13 2006/11/02 20:51:49 grobian Exp $
+
+  02 Nov 2006; Fabian Groffen <grobian@gentoo.org> transfac-3.2.ebuild:
+  Dropped ppc-macos, see you in prefix.
 
   18 Aug 2006; Jason Wever <weeve@gentoo.org> transfac-3.2.ebuild:
   Added ~sparc keyword wrt bug #144241.
